# maestro

./: .gitignore  AGENTS.md  README.md  WORKFLOW.example.md  WORKFLOW.md  pyproject.toml
src/symphony/: __init__.py  app_server.py  cli.py  errors.py  logging.py  models.py  orchestrator.py  runner.py  server.py  service.py  tracker.py  workflow.py  workspace.py
tests/: test_app_server.py  test_orchestrator.py  test_runner.py  test_server.py  test_tracker.py  test_workflow.py  test_workspace.py
